--- a/bower.json
+++ b/bower.json
@@ -16,17 +16,17 @@
     "package.json"
   ],
   "dependencies": {
-    "angular": "~1.4.x",
-    "jquery": "~2.1.4",
-    "fullcalendar": "~2.7.1",
-    "moment": "~2.10.3"
+    "angular": ">=1.4",
+    "jquery": ">=2.1",
+    "fullcalendar": ">=2.7",
+    "moment": ">=2.10"
   },
   "devDependencies": {
     "angular-mocks": "~1.x",
     "bootstrap-css": "2.3.1"
   },
   "resolutions": {
-    "jquery": "~2.1.4",
-    "angular": "~1.4.x"
+    "jquery": ">=2.1",
+    "angular": ">=1.4"
   }
 }
