--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "angular": ">=1.4",
     "jquery": ">=2.1",
-    "fullcalendar": ">=2.7",
+    "fullcalendar": "~2.7.1",
     "moment": ">=2.10"
   },
   "devDependencies": {
